----------------------------------------------------------------
mirt 0.2.5
---------------------------------------------------------------

* pass rotate='rotation' from mirt and polymirt to override default 
  default 'varimax' rotation at estimation time (suggested by 
  Niels Waller)

* oblique rotations return invisible factor correlation matrix

----------------------------------------------------------------
mirt 0.2.4
---------------------------------------------------------------

* degrees of freedom correctly adjusted when using noncompensatory
  items

* confmirtClass reorganized to work with S4 methods, now work
  more consistently with methods. 

* fixed G^2 and log-likelihood in logLik() when product terms included

* bugfix in drawThetas when noncompensatory items used

---------------------------------------------------------------
mirt 0.2.3
---------------------------------------------------------------

* bugfixes for fscores, itemplot, and generic functions

* read.mirt() added for creating a suitable plink object

* mirt() and bfactor() can now accommodate polychotomous items using 
  an ordinal IRT scheme

* itemplot() now makes use of the handy plink package plots, giving a 
  good deal of flexibility. 

* Generic plot()'s now use lattice plots extensively

----------------------------------------------------------------
mirt 0.2.2
----------------------------------------------------------------

* Ported src code into Rcpp for future tweaking. 

* Added better fitted() function when missing data exist (noticed by 
  Erin Horn)

----------------------------------------------------------------
mirt 0.2.1
----------------------------------------------------------------

* ML estimation of factor scores for mirt and bfactor

* RMSEA statistic added for all fitted models

* Nonlinear polynomial estimation specification for confmirt models, now
  with more consistent returned labels
