@@ -266,7 +266,7 @@ mirt <- function(data, nfact, guess = 0, SE = FALSE, rotate = 'varimax', prev.co
 		d <- par[(length(a)+1):length(par)]
 		if(ncol(rs) == 2){
 			itemtrace <- P.mirt(a, d, Theta, gues) 
-			itemtrace <- cbind(itemtrace, 1.0 - itemtrace)
+			itemtrace <- cbind(1.0 - itemtrace, itemtrace)
 		} else {
 			itemtrace <- P.poly(a, d, Theta, TRUE)	
 		}
@@ -313,11 +313,7 @@ mirt <- function(data, nfact, guess = 0, SE = FALSE, rotate = 'varimax', prev.co
         Names <- c(Names, paste("Item.",i,"_",1:K[i],sep=""))				
 	colnames(fulldata) <- Names			
 	for(i in 1:J){
-		ind <- index[i]
-		if(setequal(uniques[[i]], c(0,1))){
-			fulldata[ ,itemloc[ind]:(itemloc[ind]+1)] <- cbind(data[,ind],abs(1-data[,ind]))
-			next
-		}
+		ind <- index[i]		
 		dummy <- matrix(0,N,K[ind])
 		for (j in 0:(K[ind]-1))  
 			dummy[,j+1] <- as.integer(data[,ind] == uniques[[ind]][j+1])  		
@@ -325,22 +321,36 @@ mirt <- function(data, nfact, guess = 0, SE = FALSE, rotate = 'varimax', prev.co
 	}	
 	fulldata[is.na(fulldata)] <- 0
 	pats <- apply(fulldata, 1, paste, collapse = "/") 
-	freqs <- table(pats)
+	freqs <- rev(table(pats))
 	nfreqs <- length(freqs)
 	r <- as.vector(freqs)	
 	tabdata <- unlist(strsplit(cbind(names(freqs)), "/"))
 	tabdata <- matrix(as.numeric(tabdata), nfreqs, sum(K), TRUE)	
+	tabdata2 <- matrix(NA, nfreqs, J)
+	tmp <- c()
+	for(i in 1:J){ 
+		if(K[i] == 2) tmp <- c(tmp,0,1)
+		else tmp <- c(tmp, 1:K[i])
+	}
+	for(i in 1:nfreqs){
+		if(sum(tabdata[i, ]) < J){
+			tmp2 <- rep(NA,J)
+			ind <- tmp[as.logical(tabdata[i, ])]
+			logicalind <- as.logical(tabdata[i, ])
+			k <- 1
+			for(j in 1:J){
+				if(sum(logicalind[itemloc[j]:(itemloc[j+1]-1)]) != 0){
+					tmp2[j] <- ind[k]
+					k <- k + 1
+				}
+			}
+			tabdata2[i, ] <- tmp2
+		} else tabdata2[i, ] <- tmp[as.logical(tabdata[i, ])]
+	}		
 	tabdata <- cbind(tabdata,r) 
-	colnames(tabdata) <- c(Names,'Freq')
-	
-	#for return
-	pats <- apply(data, 1, paste, collapse = "/") 
-	freqs <- table(pats)		
-	tabdata2 <- unlist(strsplit(cbind(names(freqs)), "/"))
-	tabdata2 <- suppressWarnings(matrix(as.numeric(tabdata2), nfreqs, J, TRUE))	
 	tabdata2 <- cbind(tabdata2,r) 
-	colnames(tabdata2) <- c(itemnames,'Freq')	
-	
+	colnames(tabdata) <- c(Names, 'Freq')
+	colnames(tabdata2) <- c(itemnames, 'Freq')	
 	if(is.logical(par.prior)) 
 	    if(par.prior) suppressAutoPrior <- FALSE  
 	        temp <- matrix(c(1,0,0),ncol = 3, nrow=J, byrow=TRUE)
@@ -353,10 +363,11 @@ mirt <- function(data, nfact, guess = 0, SE = FALSE, rotate = 'varimax', prev.co
 				temp[par.prior$int.items[i],2:3] <- par.prior$int		 
 	}  
 	par.prior <- temp 
+	Rpoly <- cormod(na.omit(data),K,guess)
 	if(!is.null(prev.cor)){
 		if (ncol(prev.cor) == nrow(prev.cor)) Rpoly <- prev.cor
 			else stop("Correlation matrix is not square.\n")
-	} else Rpoly <- cormod(na.omit(data),K,guess)
+	} 
 	if(det(Rpoly) < 1e-15) Rpoly <- cor(na.omit(data.original))
 	FA <- suppressWarnings(psych::fa(Rpoly,nfact,rotate = 'none', warnings= FALSE, fm="minres"))	
 	loads <- unclass(loadings(FA))
@@ -365,14 +376,10 @@ mirt <- function(data, nfact, guess = 0, SE = FALSE, rotate = 'varimax', prev.co
 	cs <- sqrt(u)
 	lambdas <- loads/cs		
     zetas <- list()	
-    for(i in 1:J){
-        if(K[i] == 2){
-            zetas[[i]] <- qnorm(mean(fulldata[,itemloc[i]]))/cs[i]            			
-        } else {
-            temp <- table(data[,i])[1:(K[i]-1)]/N
-            temp <- cumsum(temp)			
-            zetas[[i]] <- qnorm(1 - temp)/cs[i]        			
-        }       
+    for(i in 1:J){        
+        temp <- table(data[,i])[1:(K[i]-1)]/N
+        temp <- cumsum(temp)			
+        zetas[[i]] <- qnorm(1 - temp)/cs[i]        			        
     }    		
 	pars <- list(lambdas=lambdas, zetas=zetas)
 	npars <- length(unlist(pars))
@@ -450,12 +457,13 @@ mirt <- function(data, nfact, guess = 0, SE = FALSE, rotate = 'varimax', prev.co
 		parsSE <- rebuildPars(sqrt(diag(vcovpar)), pars)	
 	}	
 	logN <- 0
+	npatmissing <- sum(is.na(rowSums(tabdata2)))
 	logr <- rep(0,length(r))	
 	for (i in 1:N) logN <- logN + log(i)
 	for (i in 1:length(r)) 
 		for (j in 1:r[i]) 
 			logr[i] <- logr[i] + log(j)    	
-	df <- (length(r) - 1) - npars + nfact*(nfact - 1)/2 
+	df <- (length(r) - 1) - npars + nfact*(nfact - 1)/2  - npatmissing
 	X2 <- 2 * sum(r * log(r/(N*Pl)))	
 	logLik <- logLik + logN/sum(logr)	
 	p <- 1 - pchisq(X2,df)  
@@ -709,10 +717,9 @@ setMethod(
 				sqrt(object@Pl * nrow(object@data)),digits)
 			expected <- round(N * object@Pl/sum(object@Pl),digits)  
 			tabdata <- object@tabdata
-			freq <- tabdata[ ,ncol(tabdata)]			
-			tabdata[tabdata[ ,1:ncol(object@data)] == 99] <- NA
-			tabdata[ ,ncol(tabdata)] <- freq
-			tabdata <- cbind(tabdata,expected,res)
+			ISNA <- is.na(rowSums(tabdata))
+			expected[ISNA] <- res[ISNA] <- NA
+			tabdata <- data.frame(tabdata,expected,res)
 			colnames(tabdata) <- c(colnames(object@tabdata),"exp","res")	
 			if(!is.null(printvalue)){
 				if(!is.numeric(printvalue)) stop('printvalue is not a number.')
@@ -783,13 +790,10 @@ setMethod(
 	f = "fitted",
 	signature = signature(object = 'mirtClass'),
 	definition = function(object, digits = 3, ...){  
-		expected <- round(nrow(object@data) * object@Pl,digits)  
+		Exp <- round(nrow(object@data) * object@Pl,digits)  
 		tabdata <- object@tabdata
-		freq <- tabdata[ ,ncol(tabdata)]
-		tabdata[tabdata[ ,1:ncol(object@data)] == 9] <- NA
-		tabdata[ ,ncol(tabdata)] <- freq
-		tabdata <- cbind(tabdata,expected)
-		colnames(tabdata) <- c(colnames(object@tabdata),"freq","exp")	
+		Exp[is.na(rowSums(tabdata))] <- NA				
+		tabdata <- cbind(tabdata,Exp)			
 		print(tabdata)
 		invisible(tabdata)
 	}
